src/test/ui/inline-asm-bad-operand.stderr
error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:31:24
   |
LL |         asm!("" :: "r"("")); //~ ERROR E0669
   |                        ^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:36:32
   |
LL |         asm!("ret" : : "{rdi}"(target)); //~ ERROR E0669
   |                                ^^^^^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:43:29
   |
LL |     unsafe { asm!("" :: "i"(hello)) }; //~ ERROR E0669
   |                             ^^^^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:51:38
   |
LL |         asm!("movups $1, %xmm0"::"m"(arr)); //~ ERROR E0669
   |                                      ^^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:58:32
   |
LL |         asm!("mov sp, $0"::"r"(addr)); //~ ERROR E0669
   |                                ^^^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:65:32
   |
LL |         asm!("mov sp, $0"::"r"(addr), //~ ERROR E0669
   |                                ^^^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:66:32
   |
LL |                            "r"("hello e0669")); //~ ERROR E0669
   |                                ^^^^^^^^^^^^^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0669`.
